--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport"
-    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width; height: device-height">
-
-  <!-- Own information -->
+    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
   <!-- Encoding -->
   <meta charset="UTF-8">
   <!-- Description of Web Page -->
   <meta name="description" content="Website of Raphael Witt">
-  <!-- Keywords important for Google -->
+  <!-- Keywords -->
   <meta name="keywords" content="Raphael Witt, personal homepage">
   <title>Raphael Witt</title>
 
@@ -24,13 +22,11 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet">
   <!-- Pattern css -->
   <link href="https://unpkg.com/pattern.css" rel="stylesheet">
-  <!-- Popper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <!-- jQuery JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled Bootstrap JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-
+  <!-- Styling -->
   <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -69,7 +65,6 @@
       </div>
     </div>
   </div>
-
 
   <script src="js/index.js"></script>
 </body>
